--- a/package.json
+++ b/package.json
@@ -1,41 +1,26 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-sqlite",
+  "name": "glitch-hello-node",
   "version": "0.0.1",
-  "description": "A simple Node app with SQLite as a database management system, instantly up and running.",
+  "description": "A simple Node app built on fastify, instantly up and running. Built to be remixed on Glitch.com.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "sqlite3": "^4.1.1",
-    "discord.js": "^12.5.1",
-    "node-fetch": "^2.6.1",
-    "wokcommands": "^1.2.8",
-    "mongoose": "^5.11.20",
-    "imageapi.js": "^1.3.2",
-    "@discordjs/opus": "^0.3.3",
-    "ffmpeg-static": "^4.2.7",
-    "distube": "^2.8.11",
-    "@distube/youtube-dl": "^2.0.0",
-    "@distube/ytdl": "^2.0.4",
-    "@distube/ytpl": "^1.0.10",
-    "@distube/ytsr": "^1.0.8",
-    "ytdl-core": "^4.4.5",
-    "genius-lyrics-api": "^3.0.6",
-    "mal-scraper": "^2.11.3",
-    "discord.js-pagination": "^1.0.1",
-    "akaneko": "^4.5.3",
-    "jikan-node": "^1.2.1"
+    "fastify": "^3.28.0",
+    "fastify-formbody": "^5.2.0",
+    "fastify-static": "^4.6.1",
+    "handlebars": "^4.7.7",
+    "point-of-view": "^5.2.0",
+    "discord.js": "^13.6.0",
+    "wokcommands": "^1.5.3",
+    "canvas": "^2.9.1"
   },
   "engines": {
-    "node": "12.x"
+    "node": "16.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-sqlite"
+    "url": "https://glitch.com/edit/#!/glitch-hello-node"
   },
   "license": "MIT",
   "keywords": [
